# msreport

./: CHANGELOG.md  CHANGELOG.rst  README.md  README.rst  README.txt  pyproject.toml  setup.py
.github/workflows/: run-tests.yml
helper/: __init__.py  calc.py  table.py
msreport/: __init__.py  aggregate.py  analyze.py  errors.py  export.py  fasta.py  impute.py  isobar.py  normalize.py  peptidoform.py  plot.py  qanalysis.py  qexport.py  qplot.py  qtable.py  reader.py
msreport/aggregate/: condense.py  pivot.py  summarize.py
msreport/helper/: __init__.py  calc.py  maxlfq.py  table.py  temp.py
msreport/plot/: __init__.py  _partial_plots.py  comparison.py  distribution.py  multivariate.py  plots.py  quality.py  style.py
msreport/rinterface/: __init__.py  limma.py  rinstaller.py
msreport_scripts/aggregation/: __init__.py  identified_sites_table.py  quantified_sites_table.py
msreport_scripts/benchmark/: __init__.py
msreport_scripts/excel_report/: __init__.py  proteins.py
quanalysis/: __init__.py
quanplot/: __init__.py  plot.py
quantable/: __init__.py
reader/: __init__.py
report/: __init__.py  _excel.py  amica.py  excel.py
rinterface/: __init__.py
rinterface/rscripts/: limma.R
scripts/benchmark/: __init__.py
tests/: test_aggregate.py  test_analyze.py  test_condense.py  test_export.py  test_helper.py  test_impute.py  test_isobar.py  test_maxlfq.py  test_normalize.py  test_peptidoform.py  test_plot.py  test_qanalysis.py  test_qtable.py  test_quanalysis.py  test_quantable.py  test_reader.py  test_site_to_protein.py  test_summarize.py
(+30 files in other folders)
