[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msreport"
description = "Post processing and analysis of quantitative proteomics data"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "David M. Hollenstein", email = "hollenstein.david@gmail.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["mass spectrometry", "proteomics", "post processing", "data analysis"]
requires-python = ">=3.9"
dependencies = [
  "adjustText",
  "matplotlib",
  "numpy",
  "pandas",
  "pyteomics",
  "rpy2>=3.5.3",
  "scipy",
  "seaborn>=0.12.0",
  "scikit-learn>=1.0.0",
  "statsmodels",
  "xlsxreport>=0.0.5",
]
dynamic = ["version"]

[tool.setuptools]
packages = [
  "msreport",
  "msreport.aggregate",
  "msreport.helper",
  "msreport.rinterface",
  "msreport.rinterface.rscripts",
  "msreport_scripts.benchmark",
  "msreport_scripts.excel_report",
]

[tool.setuptools.package-data]
"msreport.rinterface.rscripts" = ["*.r", "*.R"]

[tool.setuptools.dynamic]
version = {attr = "msreport.__version__"}
